vizualizacao dos artigos corrigida conforme o estido adoptado

--- a/app/assets/stylesheets/theme.css
+++ b/app/assets/stylesheets/theme.css
@@ -287,6 +287,14 @@ color:  #293a49;
 
 }
 
+/*** Varios ADs ***/
+
+#painelAnuncios{
+  list-style-type: none;
+
+
+}
+
 
 /******THUMBNAILS**********/
 
