--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -97,7 +97,6 @@
         autoclose: true,
         todayHighlight: true,
         calendarWeeks: true,
-        startDate: day + "/" + month + "/" + (year - 100),
-        endDate: day + "/" + month + "/" + (year - 13)
+        startDate: day + "/" + month + "/" + (year - 100)
     })
 </script>
