--- a/app/views/layouts/_sidebar_left.html.erb
+++ b/app/views/layouts/_sidebar_left.html.erb
@@ -1,9 +1,9 @@
 
 <div class="panel panel-default">
-  <div class="panel-body">
+  <div class="panel-body" style="text-align: center">
 
 <% if user_signed_in? %>
-    <div class="col-md-12 col-lg-12 col-xs-4" style="text-align: center">
+    <div class="col-md-12 col-lg-12 col-xs-4 col-sm-8" style="">
       <% if current_user.avatar.url != nil %>
       <%= image_tag current_user.avatar.url(:medium),:width => "50%",:class => "img-circle" %>
       <% else %>
