--- a/app/views/layouts/_sidebar_right_ad.html.erb
+++ b/app/views/layouts/_sidebar_right_ad.html.erb
@@ -6,7 +6,7 @@
           <li style="margin-bottom:-25px;">
             <div class="thumbnail" style="padding: 0">
               <div style="padding:4px">
-                <img alt="Pub1" id="pubAD" src="assets/pub1.jpg">
+                <img alt="Pub1" id="pubAD" src="/assets/pub1.jpg">
               </div>
             </div>
           </li>
@@ -14,7 +14,7 @@
           <li style="margin-bottom:-25px;">
             <div class="thumbnail" style="padding: 0">
               <div style="padding:4px">
-                <img alt="Pub2" id="pubAD" src="assets/pub2.jpg">
+                <img alt="Pub2" id="pubAD" src="/assets/pub2.jpg">
               </div>
             </div>
           </li>
@@ -22,7 +22,7 @@
           <li style="margin-bottom:-25px;">
             <div class="thumbnail" style="padding: 0">
               <div style="padding:4px">
-                <img alt="Pub3" id="pubAD" src="assets/pub3.jpg">
+                <img alt="Pub3" id="pubAD" src="/assets/pub3.jpg">
               </div>
             </div>
           </li>
