[Update Feature] Layout application

--- a/app/views/layouts/_sidebar_right_featured.html.erb
+++ b/app/views/layouts/_sidebar_right_featured.html.erb
@@ -1,5 +1,5 @@
-
-<section class="panel">
+<div class="col-lg-12 col-md-12 col-sx-12 col-sm-6">
+    <section class="panel">
         <header class="panel-heading">
             Mais Vistos
         </header>
@@ -34,8 +34,8 @@
                 </article>
             </div>
         </div>
-</section>
-
+    </section>
+</div>
 <!--
 <section class="panel">
   <header class="panel-heading">Destaques</header>
