--- a/app/views/layouts/_sidebar_right_ad.html.erb
+++ b/app/views/layouts/_sidebar_right_ad.html.erb
@@ -1,3 +1,4 @@
+<div class="col-lg-12 col-md-12 col-sx-12 col-sm-6">
   <section class="panel">
     <header class="panel-heading">Publicidade</header>
     <div class="panel-body">
@@ -30,3 +31,4 @@
        </ul>
     </div>
   </section>
+</div>
