--- a/app/views/messages/_show.html.erb
+++ b/app/views/messages/_show.html.erb
@@ -13,14 +13,10 @@
 
   <p>
     <small>
-    Enviado por:
-      <%= message.user_sender %> - 
-      <%= message.user_sender %>
-    As:
-      <%= message.created_at %>
+      <%= message.created_at.strftime("%d-%m-%Y") %>
     </small>
   </p>
-  
+
   <%= message.text %>
 
   <p hidden="true">
