caixas dos ads aparentemente finalizadas

--- a/app/assets/stylesheets/theme.css
+++ b/app/assets/stylesheets/theme.css
@@ -291,10 +291,12 @@ color:  #293a49;
 
 #painelAnuncios{
   list-style-type: none;
-
-
 }
 
+.h4{
+  margin-bottom: 25px;
+  
+}
 
 /******THUMBNAILS**********/
 
