--- a/app/views/academy/questions/_question.html.erb
+++ b/app/views/academy/questions/_question.html.erb
@@ -1,7 +1,7 @@
 
 <div class="col-lg-12">
   <section class="panel">
-    <header class="panel-heading">
+    <header class="panel-heading border-header">
       <div class="pull-right">
 
         <%##  botão verde com um lapis para editar a pergunta  ##%>
@@ -25,10 +25,6 @@
       <div class="col-xs-9 col-md-10 ">
         <%= @academy_question.text %><%##  texto da pergunta  ##%>
         <br/>o botão de edit não está direito
-        <p>
-          <strong>Image url:</strong>
-          <%= @academy_question.image_url %>
-        </p>
       </div>
 
       <span class="label pull-right" style="background-color: #<%= @academy_question.category.color %>">
