--- a/app/views/admin/ads/index.html.erb
+++ b/app/views/admin/ads/index.html.erb
@@ -1,4 +1,3 @@
-
 <ol class="breadcrumb">
               <li class="active"><a href="<%= ads_path %>"><i class="fa fa-dashboard"></i> Anúncios</a></li>
 
@@ -39,7 +38,7 @@
             <td>
               <div class="img_table">
                 <!--HELPER helper/ads_helper -->
-               <%= first_image( ad.ad_images.first ) %>
+               <%= ad_image( ad.ad_images.first )  %>
               </div>
             </td>
             <td><%= ad.title %></td>
