--- a/app/views/academy/answers/_answer.html.erb
+++ b/app/views/academy/answers/_answer.html.erb
@@ -1,6 +1,6 @@
 <div class="col-lg-12">
-  <section class="panel">
-    <header class="panel-heading">
+  <section class="panel <%=  is_mine?( answer.user.id ) %>">
+    <header class="panel-heading ">
 
     </header>
     <div class="panel-body">
