--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -8,6 +8,7 @@
       <th>Email</th>
       <th>Cidade</th>
       <th>Estado</th>
+      <th>Type</th>
       <th></th>
       <th></th>
       <th></th>
@@ -19,8 +20,9 @@
       <tr>
         <td><%= user.name %></td>
         <td><%= user.email %></td>
-        <td><%= user %></td>
-        <td></td>
+        <td><%= user.city.city %></td>
+        <td>ESTADO???</td>
+        <td><%= user.user_type %></td>
         <td><%= link_to 'Ver', admin_user_path(user) %></td>
         <td><%= link_to 'Editar', edit_admin_user_path(user) %></td>
         <td><%= link_to 'Eliminar', admin_user_path(user), method: :delete, data: { confirm: 'Tem a certeza?' } %></td>
