--- a/app/views/layouts/_search_bar_academy.html.erb
+++ b/app/views/layouts/_search_bar_academy.html.erb
@@ -1,26 +1,39 @@
- <div >
-                      <section class="panel">
-                          <div class="panel-body ">
-                              <input type="text" placeholder="Keyword Search" class="form-control">
-                          </div>
-                      </section>
-                      <section class="panel">
-                          <header class="panel-heading border-header">
-                              Categorias
-                          </header>
-                          <div class="panel-body">
-                              <ul class="nav prod-cat">
-                                  <li>
-                                      <a href="#" class="active"><i class=" fa fa-angle-right"></i> Dress</a>
-                                      <ul class="nav">
-                                          <li class="active"><a href="#">- Shirt</a></li>
-                                          <li><a href="#">- Pant</a></li>
-                                          <li><a href="#">- Shoes</a></li>
-                                      </ul>
-                                  </li>
-                                  
-                                  <li><a href="#"><i class=" fa fa-angle-right"></i> Accessories</a></li>
-                              </ul>
-                          </div>
-                      </section>
-                  </div>
+<div >
+    <section class="panel">
+        <div class="panel-body ">
+            <input type="text" placeholder="Keyword Search" class="form-control">
+        </div>
+    </section>
+    <section class="panel">
+        <header class="panel-heading border-header">
+            Categorias
+        </header>
+        <div class="panel-body">
+            <ul class="nav prod-cat">
+                <li>
+                    <a href="#" class="active"><i class=" fa fa-angle-right"></i> Agricultura</a>
+                    <ul class="nav">
+                        <li class="active"><a href="#">- sub cat</a></li>
+                        <li><a href="#">- sub cat</a></li>
+                        <li><a href="#">- sub cat</a></li>
+                    </ul>
+                </li>
+                
+                <li><a href="#"><i class=" fa fa-angle-right"></i> Pecuaria</a></li>
+            </ul>
+        </div>
+    </section>
+</div>
+
+    <section class="panel">
+        <header class="panel-heading border-header">
+            Dicas para fazer perguntas
+        </header>
+        <div class="panel-body">
+           <p class="col-md-12">
+  The best way to get the answers you're looking for is to learn how to best ask your question. Learn some tips on how to best format your questions in the forum.
+    <p>
+        </div>
+    </section>
+
+
