--- a/app/views/academy/questions/_question.html.erb
+++ b/app/views/academy/questions/_question.html.erb
@@ -19,7 +19,8 @@
 
     <div class="panel-body">
       <div class="col-xs-2 col-md-2"><%##  Avatar do user que fez a pergunta  ##%>
-        <%= image_tag @academy_question.user.avatar.url(:medium),:width => "70%",:class => "img-circle" %>
+        <%=link_to image_tag(@academy_question.user.avatar.url(:medium),:width => "70%",:class => "img-circle") , @academy_question.user %>
+        
       </div>
 
       <div class="col-xs-9 col-md-10 ">
@@ -27,10 +28,20 @@
         <br/>o botão de edit não está direito
       </div>
 
-      <span class="label pull-right" style="background-color: #<%= @academy_question.category.color %>">
-      <%= @academy_question.category.name %>
-      </span>
+     
     </div>
+    <div class="panel-footer">
+        &nbsp;
+       <span class="label pull-left" style="background-color: #<%= @academy_question.category.color %>">
+        <%= @academy_question.category.name %>
+       </span>
 
+        <div class="pull-right">
+              <abbr class="timeago" title="<%= @academy_question.created_at.getutc.iso8601 %>"> 
+                <%= @academy_question.created_at.to_s %> 
+              </abbr>
+        </div>
+
+    </div>
   </section>
 </div>
