--- a/app/views/academy/questions/index.html.erb
+++ b/app/views/academy/questions/index.html.erb
@@ -19,18 +19,20 @@
 
 <div class="panel panel-default">
 <%###  categoria | view counter | respostas | Titulo | utilizador | link para a pergunta |  ###%>
-<table>
-    <% @academy_questions.each do |academy_question| %>
-      <tr>
-        <td><%= academy_question.category.name %></td>
-        <td>view Counter</td>
-        <td><%= academy_question.answers.count %></td>
-        <td><%= academy_question.title %></td>
-        <td><%= academy_question.user.name %></td>
-        <td><%= link_to 'Show', academy_question %></td>
-      </tr>
-    <% end %>
-</table>
+<div id="questions">
+    <table>
+        <% @academy_questions.each do |academy_question| %>
+          <tr>
+            <td><%= academy_question.category.name %></td>
+            <td>view Counter</td>
+            <td><%= academy_question.answers.count %></td>
+            <td><%= academy_question.title %></td>
+            <td><%= academy_question.user.name %></td>
+            <td><%= link_to 'Show', academy_question %></td>
+          </tr>
+        <% end %>
+    </table>
+</div>
 </div>
 <br>
 
@@ -68,3 +70,68 @@
 
 
     </div>
+
+
+<div class="container">
+    <div class="row">
+        <div class="">
+            <div class="panel ">
+                <div class="panel-heading border-header">
+                    <span class="fa fa-comment"></span> Perguntas
+                    <div class="btn-group pull-right">
+                        <button type="button" class="btn btn-default btn-xs dropdown-toggle" data-toggle="dropdown">
+                            <span class="fa fa-chevron-down"></span>
+                        </button>
+                        <ul class="dropdown-menu slidedown">
+                            <li><a href="#"><span class="fa fa-refresh">
+                            </span>Refresh</a></li>
+                            <li><a href="#"><span class="fa fa-ok-sign">
+                            </span>Available</a></li>
+                            <li><a href="#"><span class="fa fa-remove">
+                            </span>Busy</a></li>
+                            <li><a href="#"><span class="fa fa-time"></span>
+                                Away</a></li>
+                            <li class="divider"></li>
+                            <li><a href="#"><span class="fa fa-off"></span>
+                                Sign Out</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="panel-body panel-bodyMessage">
+                    <ul class="chat">
+                        <div id="messages">
+                            <ul class="chat">
+                             <% @academy_questions.each do |academy_question| %>
+                                  <li class="left clearfix"><span class="chat-img pull-left">
+                                     <%= link_to (image_tag academy_question.user.avatar.url(:medium),:width => "100%",:class => "img-circle"), academy_question.user %>
+                                    </span>
+                                    <div class="chat-body clearfix">
+                                        <div class="header">
+                                              <strong class="primary-font">
+                                              <%= academy_question.user.name %>
+                                            </strong> 
+                                           
+                                        </div>
+                                        <p>
+                                           <%= link_to academy_question.title, academy_question %><%##  texto da pergunta  ##%>
+                                        </p>
+                                        <div class="pull-right">
+                                            about 1 minute ago
+                                        </div>
+                                        <div class="pull-right">
+                                            <span class="label label-info">
+                                                <%= academy_question.category.name %>
+                                            </span>
+                                        </div>
+                                    </div>
+                                  </li>
+                              <% end %>
+                          </ul>
+                        </div>
+                    </ul>
+                </div>
+            </div>
+        </div>
+
+        </div>
+    </div> 
