--- a/app/views/messages/_messages_ads.html.erb
+++ b/app/views/messages/_messages_ads.html.erb
@@ -31,15 +31,17 @@
 
           <%= link_to('<span style="float: right;" class="fa fa-times-circle"></span>'.html_safe, cancel_message_path(id_ad: @ad.id,user_id: t.user_receiver(current_user)), :data => { :confirm => "Tem a certeza que pertende eliminar a troca de mensagem com este utilizador?" }) if @ad.user_id == current_user.id  %>
         </h4>
+        
         <span class="label label-info" style="float: right;"><%= t.messages.count%></span>
       </div>
 
       <div id="<%= t.user_receiver(current_user) %>" class="panel-collapse collapse">
         <div class="panel-body">
 
-          <% t.messages.each do |m| %>
-            <%= render "messages/show" , :message => m, :talk => t.id %>
-          <% end %>
+          
+            <%= render "messages/show" , :messages => t.messages, :talk => t.id %>
+
+
 
           <%= form_for @message, :url => ad_new_messages_path(@ad.id),:html => {:id => "comment_ad",:ajax_path => ad_new_messages_path(@ad.id) } do |m| %>
 
