--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,19 +1,20 @@
 <h2>A tua caixa de entrada</h2>
-<% if @talks.size == 0 %>
+<% if @talks_privates.size == 0 %>
 Nenhuma mensagem na tua caixa de entrada
 <% end %>
 
 <div class="container">
     <div class="row">
-        <% @talks.each do |talk| %>
+        <% @talks_privates.each do |talk| %>
             <% if talk.messages != 0 %>
-                <div class="col-xs-12 col-sm-12 col-md-6">
+                <div class="col-xs-12 col-sm-12 col-md-6" id="accordion">
                     <div class="panel panel-primary">
                         <div class="panel-heading">
                             <span class="fa fa-comment"></span> <%= link_to "Ver Conversa".html_safe  ,  message_path(talk) %>
                             <div class="btn-group pull-right">
                                 <button type="button" class="btn btn-default btn-xs dropdown-toggle" data-toggle="dropdown">
                                     <span class="fa fa-chevron-down"></span>
+                                   
                                 </button>
                                 <ul class="dropdown-menu slidedown">
                                     <li><a href="#"><span class="fa fa-refresh">
@@ -27,10 +28,14 @@ Nenhuma mensagem na tua caixa de entrada
                                     <li class="divider"></li>
                                     <li><a href="#"><span class="fa fa-off"></span>
                                         Sign Out</a></li>
+
+                                    <li> <button type="button" class="btn btn-primary" data-toggle="collapse" data-target="#demo">
+                                    <span class="fa fa-chevron-down"></span>
+                                  </button></li>
                                 </ul>
                             </div>
                         </div>
-                        <div class=" panel-body panel-bodyMessage">
+                        <div id="demo" class=" panel-body panel-bodyMessage panel-collapse collapse in">
                             <ul class="chat">
                                 <% talk.latest_messages.each do |message| %>
                                   <% if message.user.id != current_user.id %>
