[Update Feature] Css na Academia/questions

--- a/app/views/academy/answers/_form.html.erb
+++ b/app/views/academy/answers/_form.html.erb
@@ -3,8 +3,8 @@
     <div class="col-sm-12 col-md-12">
       <div class="panel" id="form_message">
         <% if controller.action_name != "edit" %>
-          <header class="panel-heading">
-              Respostas
+          <header class="panel-heading border-header">
+              Resposta
           </header>
         <% end %>
         <div class="panel-body">
