--- a/app/views/academy/questions/index.html.erb
+++ b/app/views/academy/questions/index.html.erb
@@ -39,7 +39,7 @@
 
 
 <%= link_to 'Nova questão', new_academy_question_path %>
-<legend>Questoes em Thumbnails( meter isto direito) </legend>
+<legend>Questoes em Thumbnails( meter isto direito) ISTO É so para testar e ver qual fica melhor e a barra lateral tb é so para testar </legend>
 
 <div class="row">
 
@@ -66,11 +66,7 @@
               </div>
            </div>
           <% end %>
-
-
-
     </div>
-
 
 <div class="container">
     <div class="row">
@@ -135,3 +131,98 @@
 
         </div>
     </div> 
+
+
+<div class="row classifieds-table">
+    <div class="col-lg-12">
+      <section class="panel">
+        <header class="panel-heading"><h3>Perguntas</h3></header>
+        <div class="table-responsive">
+                    <table class="table table-hover">
+                      <thead>
+                        <tr>
+                          <th>Pergunta</th>
+                          <th class="text-center">Views</th>
+                          <th class="text-center">Respostas</th>
+                        </tr>
+                      </thead>
+                      <tbody>
+                        <tr>
+                          <td class="col-sm-8 col-md-6">
+                            <div class="media">
+                              <a class="thumbnail pull-left" href="#">
+                                <img class="media-object" src="http://placehold.it/72x72/e0e0e0" style="width: 72px; height: 72px;">
+                              </a>
+                              <div class="media-body">
+                                <h4 class="media-heading"><a href="#">Pergunta name</a></h4>
+                                <p><small>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla adipiscing tempor ornare. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac ...</small></p>
+                              </div>
+                            </div>
+                          </td>
+                          <td class="col-sm-1 col-md-1 text-center" style="vertical-align: middle;"><strong>110 </strong></td>
+                          <td class="col-sm-1 col-md-1 text-center" style="vertical-align: middle;">76x</td>
+                        </tr>
+                        <tr>
+                          <td class="col-sm-8 col-md-6">
+                            <div class="media">
+                              <a class="thumbnail pull-left" href="#">
+                                <img class="media-object" src="http://placehold.it/72x72/e0e0e0" style="width: 72px; height: 72px;">
+                              </a>
+                              <div class="media-body">
+                                <h4 class="media-heading"><a href="#">Pergunta name</a></h4>
+                                <p><small>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla adipiscing tempor ornare. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac ...</small></p>
+                              </div>
+                            </div>
+                          </td>
+                          <td class="col-sm-1 col-md-1 text-center" style="vertical-align: middle;"><strong>110</strong></td>
+                          <td class="col-sm-1 col-md-1 text-center" style="vertical-align: middle;">76x</td>
+                        </tr>
+                        <tr>
+                          <td class="col-sm-8 col-md-6">
+                            <div class="media">
+                              <a class="thumbnail pull-left" href="#">
+                                <img class="media-object" src="http://placehold.it/72x72/e0e0e0" style="width: 72px; height: 72px;">
+                              </a>
+                              <div class="media-body">
+                                <h4 class="media-heading"><a href="#">Pergunta name</a></h4>
+                                <p><small>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla adipiscing tempor ornare. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac ...</small></p>
+                              </div>
+                            </div>
+                          </td>
+                          <td class="col-sm-1 col-md-1 text-center" style="vertical-align: middle;"><strong>110 </strong></td>
+                          <td class="col-sm-1 col-md-1 text-center" style="vertical-align: middle;">76x</td>
+                        </tr>
+                        <tr>
+                          <td class="col-sm-8 col-md-6">
+                            <div class="media">
+                              <a class="thumbnail pull-left" href="#">
+                                <img class="media-object" src="http://placehold.it/72x72/e0e0e0" style="width: 72px; height: 72px;">
+                              </a>
+                              <div class="media-body">
+                                <h4 class="media-heading"><a href="#">Pergunta name</a></h4>
+                                <p><small>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla adipiscing tempor ornare. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac ...</small></p>
+                              </div>
+                            </div>
+                          </td>
+                          <td class="col-sm-1 col-md-1 text-center" style="vertical-align: middle;"><strong>110 </strong></td>
+                          <td class="col-sm-1 col-md-1 text-center" style="vertical-align: middle;">76x</td>
+                        </tr>
+                     
+                      </tbody>
+                    </table>
+                  </div>
+                  <div class="col-lg-12" style="text-align: center;">
+                    <ul class="pagination">
+                      <li class="disabled"><a href="#">«</a></li>
+                      <li class="active"><a href="#">1 <span class="sr-only">(current)</span></a></li>
+                      <li><a href="#">2</a></li>
+                      <li><a href="#">3</a></li>
+                      <li><a href="#">4</a></li>
+                      <li><a href="#">5</a></li>
+                      <li><a href="#">»</a></li>
+                    </ul>
+                   
+                </div>
+               </section>
+        </div>
+      </div>
