--- a/app/views/layouts/_search_bar_academy.html.erb
+++ b/app/views/layouts/_search_bar_academy.html.erb
@@ -2,8 +2,12 @@
     <section class="panel">
         <div class="panel-body ">
             <input type="text" placeholder="Keyword Search" class="form-control">
+            <br>
+            <input type="submit" class="btn btn-danger btn-sm btn-search" value="Search" >
+
         </div>
     </section>
+
     <section class="panel">
         <header class="panel-heading border-header">
             Categorias
@@ -35,5 +39,37 @@
     <p>
         </div>
     </section>
+
+
+    <div class="newest-classifieds">
+            <div class="media">
+              <a class="pull-left" href="#">
+                <img class="media-object" style="width: 64px; height: 64px;" src="http://placehold.it/64x64/e0e0e0">
+              </a>
+              <div class="media-body">
+                <p><a href="#"><strong>Publicidade</strong></a></p>
+                <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel ...</p>
+              </div>
+            </div>
+            <div class="media">
+              <a class="pull-left" href="#">
+                <img class="media-object" style="width: 64px; height: 64px;" src="http://placehold.it/64x64/e0e0e0">
+              </a>
+              <div class="media-body">
+                <p><a href="#"><strong>Publicidade</strong></a></p>
+                <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel ...</p>
+              </div>
+            </div>
+            <div class="media">
+              <a class="pull-left" href="#">
+                <img class="media-object" style="width: 64px; height: 64px;" src="http://placehold.it/64x64/e0e0e0">
+              </a>
+              <div class="media-body">
+                <p><a href="#"><strong>Publicidade</strong></a></p>
+                <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel ...</p>
+              </div>
+            </div>
+            <p class="text-right show-more"><a href="#">More →</a></p>
+    </div>
 
 
